# stylenet

./: .flake8  .gitignore  README.md  build_vocab.py  config.json  constant.py  data_loader.py  loss.py  models.py  preprocess.py  pyproject.toml  pytest.ini  sample.ipynb  sample.py  test.py  train.py
src/: run.py
src/data/: dataset.py  loader.py  transforms.py
src/models/: __init__.py  decoder.py  encoder.py  sytlenet.py
src/training/: loss.py  trainer.py
src/utils/: preprocess.py  vocab.py
tests/data/: test_loader.py
tests/fixtures/: sample_factual_data.txt  sample_styled_data.txt
