[tool.poetry]
name = "stylenet"
version = "0.1.0"
description = ""
authors = ["kacky24 <kakiuchi@crimson.q.t.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
torch = "^1.7.0"
torchvision = "^0.8.1"
nltk = "^3.5"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
